Fixed up button position on mobile devices

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -507,7 +507,7 @@
     
 }
 
-@media (max-width: 500px) and (max-height: 600px) {
+@media (max-width: 500px) and (max-height: 850px) {
     .go-to-top {
         right: 50%;
         transform: translateX(50%);
